fix: profiler overflow-x

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -276,6 +276,13 @@ nav#nav-sidebar header h4 {
 }
 
 /**
+* Profiler
+*/
+#echo-debug-toolbar {
+  overflow-x: auto;
+}
+
+/**
  * Modal
  */
 #modal {
